2002-09-05  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* texi/ptexinfmt.el: discard @documentdescription.  Support
	@ifplaintext, @ifnotplaintext, @ifhtml.  Remove obsolete commands.
	(texinfo-format-ifhtml, texinfo-format-ifplaintext): New function.

2002-09-04  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el (gnus-namazu/highlight-words): Stricten
	regular expression to highlight keywords.

2002-08-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/lpath.el: Fbind `smtpmail-send-it' for Mule 2.

2002-08-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-util.el (frame-parameter): New function for oldies.

2002-08-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-frame): Remove.

2002-08-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el: Fix T-gnus version number.

2002-08-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el: T-gnus 6.15.8 revision 00.

2002-08-06  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el (gnus-namazu-update-index): Handle error
	messages printed by Namazu.
	(gnus-namazu/update-sentinel): Likewise.
	(gnus-namazu-need-path-normalization): Change its default value.
	(gnus-namazu/normalize-results): Remove `file://' prefix.

	* texi/gnus-ja.texi (Namazu Groups): Update documents.

	* lisp/gnus-namazu.el (gnus-namazu/update-p): Print error
	messages.
	(gnus-namazu-update-index): Small clean up.
	(gnus-namazu-update-all-indices): Ditto.

2002-08-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el: Bug fix of updating multiple indices.
	(gnus-namazu/setup): Call `gnus-namazu-update-all-indices' without
	arguments.
	(gnus-namazu-create-index): Clean temporary files even if an
	indexer is killed.
	(gnus-namazu/update-p): New function.
	(gnus-namazu-update-all-indices): Reimplemented.
	(gnus-namazu-update-index): Call `gnus-namazu/update-p' to decide
	whether the specified index will be updated.
	(gnus-namazu/update-sentinel): Follow the change of